# nba-alpha-gen

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: .env.example  index.html  package-lock.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ApiStatusBar.tsx  AppHeader.tsx  SectionCard.tsx  ThemeToggle.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: DashboardPage.tsx  FavoritesPage.tsx  SettingsPage.tsx
src/nba_alpha_gen/: __init__.py  config.py  main.py
src/nba_alpha_gen/routers/: odds.py
src/nba_api/: __init__.py  client.py  constants.py  exceptions.py  models.py
tests/: conftest.py  test_api.py  test_odds_client.py
